--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Brittney McKenna</title>
     <style>
         * {
             margin: 0;
@@ -418,8 +418,8 @@
         <!-- Hero Section -->
         <section id="home" class="hero">
             <div class="hero-content fade-in">
-                <h1>Your Name</h1>
-                <p>Full Stack Developer & Creative Problem Solver</p>
+                <h1>Brittney McKenna</h1>
+                <p>Full Stack Developer</p>
                 <a href="#projects" class="cta-button">View My Work</a>
             </div>
         </section>
@@ -430,8 +430,8 @@
             <div class="about-content fade-in">
                 <div class="about-image">👨‍💻</div>
                 <div class="about-text">
-                    <p>I'm a passionate developer with a love for creating innovative digital solutions. With expertise in modern web technologies, I enjoy turning complex problems into simple, beautiful, and intuitive designs.</p>
-                    <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or sharing my knowledge with the developer community.</p>
+                    <p>I'm a passionate developer with a love for creating innovative solutions. With expertise in modern web technologies, I enjoy turning complex problems into simple, beautiful, and intuitive designs.</p>
+                    <p>When I'm not coding, you can find me exploring new technologies, teaching fitness classes, and hanging with my cats.</p>
                 </div>
             </div>
         </section>
@@ -442,19 +442,15 @@
             <div class="skills-grid">
                 <div class="skill-card fade-in">
                     <h3>Frontend</h3>
-                    <p>React, Vue.js, TypeScript, HTML5, CSS3, Tailwind CSS</p>
+                    <p>React, JypeScript, HTML5, DevExpress/DevExtreme, JQuery</p>
                 </div>
                 <div class="skill-card fade-in">
                     <h3>Backend</h3>
-                    <p>Node.js, Python, Express, FastAPI, PostgreSQL, MongoDB</p>
+                    <p>C#, Node.js, Express, REST API, SQL</p>
                 </div>
                 <div class="skill-card fade-in">
                     <h3>DevOps & Tools</h3>
-                    <p>Docker, AWS, Git, CI/CD, Webpack, Vite</p>
-                </div>
-                <div class="skill-card fade-in">
-                    <h3>Design</h3>
-                    <p>Figma, Adobe XD, UI/UX Design, Responsive Design</p>
+                    <p>Docker, AWS, Git, CI/CD, Vite, BitBucket, AWS</p>
                 </div>
             </div>
         </section>
@@ -486,18 +482,6 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="project-card fade-in">
-                    <div class="project-image">⚡</div>
-                    <div class="project-content">
-                        <h3>Project Three</h3>
-                        <p>A high-performance dashboard application with advanced analytics, built using modern JavaScript frameworks and cloud technologies.</p>
-                        <div class="project-links">
-                            <a href="#" class="project-link">Live Demo</a>
-                            <a href="#" class="project-link">GitHub</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -509,15 +493,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <span>📧</span>
-                        <a href="mailto:your.email@example.com">your.email@example.com</a>
+                        <a href="mailto:your.email@example.com">brittneydmckenna@gmail.com</a>
                     </div>
                     <div class="contact-item">
                         <span>💼</span>
-                        <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
+                        <a href="www.linkedin.com/in/brittney-mckenna444">LinkedIn</a>
                     </div>
                     <div class="contact-item">
                         <span>🐱</span>
-                        <a href="https://github.com/yourusername">GitHub</a>
+                        <a href="https://github.com/bwall44">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -526,7 +510,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Your Name. Built with passion and lots of coffee ☕</p>
+        <p>&copy; 2025 Brittney McKenna. Built with passion and lots of cat snuggles</p>
     </footer>
 
     <script>
