--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <div class="logo">YourName</div>
+            <div class="logo">BrittneyMcKenna</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
