--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <div class="about-content fade-in">
                 <div class="about-image">👨‍💻</div>
                 <div class="about-text">
-                    <p>I'm a passionate developer with a love for creating innovative solutions. With expertise in modern web technologies, I enjoy turning complex problems into simple, beautiful, and intuitive designs.</p>
+                    <p>I'm a passionate developer with a love for creating innovative solutions. Experienced in building scalable applications, designing clean architectures, and collaborating across teams.</p>
                     <p>When I'm not coding, you can find me exploring new technologies, teaching fitness classes, and hanging with my cats.</p>
                 </div>
             </div>
@@ -441,12 +441,12 @@
             <h2 class="section-title fade-in">Skills & Technologies</h2>
             <div class="skills-grid">
                 <div class="skill-card fade-in">
-                    <h3>Frontend</h3>
-                    <p>React, JypeScript, HTML5, DevExpress/DevExtreme, JQuery</p>
-                </div>
-                <div class="skill-card fade-in">
                     <h3>Backend</h3>
                     <p>C#, Node.js, Express, REST API, SQL</p>
+                </div>
+                <div class="skill-card fade-in">
+                    <h3>Frontend</h3>
+                    <p>React, JypeScript, HTML5, DevExpress/DevExtreme, JQuery</p>
                 </div>
                 <div class="skill-card fade-in">
                     <h3>DevOps & Tools</h3>
